GPT4.5 harmonise bios

--- a/public/data/team/02.md
+++ b/public/data/team/02.md
@@ -4,10 +4,4 @@ Pete Woodbridge - Chief Technical Officer
 
 ## Full Details
 
-Creative Technologist, Unreal Engine Technical Artist, Virtual Production Producer
-
-Expertise: Works across creative AI applications, interactive and immersive experiences, and virtual production.
-
-Notable Work: Involved in immersive storytelling and the development of innovative content technologies.
-
-Affiliations: Has been a speaker at ARVR INNOVATE conferences and is currently R&D Innovation Manager at MediaCity Immersive Technologies.
+Pete Woodbridge is a creative technologist and virtual production specialist, with expertise spanning AI applications, immersive experiences, and technical art. As CTO, he drives innovation in storytelling and content technologies, and is a frequent speaker at industry events. Pete also serves as R&D Innovation Manager at MediaCity Immersive Technologies.
