--- a/public/data/team/06.md
+++ b/public/data/team/06.md
@@ -4,6 +4,4 @@ Marco E. Ghilardi - Simulation and Modelling Expert
 
 ## Full Details
 
-Experienced Simulation Engineer with a demonstrated history of working in the most performance-sensitive industries: Motorsport and Automotive. 
-Founded QuasiScience Ltd to solve complex, urgent, and interesting engineering challenges by combining Statistical Data Analysis, Big Data, and Numerical Simulations.
-Holds a Master of Business Administration - MBA focused in Business Administration and Management from Quantic School of Business and Technology.
+Marco E. Ghilardi is a simulation and modelling expert with extensive experience in motorsport and automotive engineering. As founder of QuasiScience Ltd, he tackles complex engineering challenges using advanced data analysis and numerical simulation. Marco holds an MBA and is known for delivering high-impact solutions in performance-driven environments.
