--- a/public/data/team/07.md
+++ b/public/data/team/07.md
@@ -4,6 +4,4 @@ Jon Cooke - Senior Dev: Full Stack
 
 ## Full Details
 
-Jon is an experienced Full Stack Developer with over two decades of work in both front-end and back-end development. He is highly proficient in modern programming languages and frameworks, including JavaScript, TypeScript, Node.js, React, C, C++, and Rust. Exceptional UX/UI on dekstop, mobile, and tablet surfaces. Performant Unix and SQL back end systems.
-
-Jon has a strong background in building scalable, secure, and maintainable applications across a range of industries. He is skilled in cloud-native development, microservices architecture, and DevOps practices, delivering practical solutions tailored to project needs.
+Jon Cooke is a senior full stack developer with over 20 years’ experience in both front- and back-end development. Highly proficient in modern languages and frameworks, he delivers scalable, secure, and user-focused applications across diverse industries, with expertise in cloud-native systems and DevOps practices.
