--- a/public/data/team/08.md
+++ b/public/data/team/08.md
@@ -4,12 +4,4 @@ Kriss Dunk - Researcher in AI and Computer Vision. Creative coder. Artist.
 
 ## Full Details
 
-Full-time artist, working at the intersection of technological innovation and post-anthropological ethics. Interested in designing, consulting, and creating immersive and innovative new-media installations for gallery and public spaces. 
-
-I believe in individual and institutional honesty, and I believe that an honest and routine appraisal of one’s planet-friendly credentials is an integral part of any fully honest person and of any fully honest institution. 
-
-Before retiring from my first career to become a full-time artist, my background was in sound engineering and design, lighting design, production management and design, and virtual production, with over a decade spent designing, drafting, and delivering events of all kinds and sizes. 
-
-Throughout my career I’ve kept up side projects across digital arts, and have studied mathematics, linguistics, literature, and sound design with several universities. I’m okay at C++, good at Python, and experienced in 3D graphics and AI workflows. I also research ethics, ecological safety and tech innovation, and have teaching experience across many age groups and sectors of society. 
-
-People over profit and planet over people.
+Kriss Dunk is a creative coder and researcher specialising in AI, computer vision, and new-media art. With a background in sound engineering, production, and immersive installations, Kriss brings a multidisciplinary and ethically conscious approach to digital arts and technology.
