--- a/public/data/team/09.md
+++ b/public/data/team/09.md
@@ -4,4 +4,4 @@ Nick Tipping - Guided Gamified Team Building
 
 ## Full Details
 
-Nick has been a leading thinker and builder in the UK games industry for nearly 30 years and currently specialises in C-Suite and Leadership team building residencies, levergaing his huge experience in games, engineering management, and managed activities.
+Nick Tipping is a leading figure in the UK games industry with nearly 30 years’ experience. He specialises in C-suite and leadership team building, drawing on deep expertise in games, engineering management, and managed activities to deliver impactful residencies and workshops.
