--- a/public/data/team/10.md
+++ b/public/data/team/10.md
@@ -3,13 +3,4 @@
 Roger McKinley – Creative Technology and Content Manager
 
 ## Full Details
-Role: Creative Technology and Content Manager at The University of Salford, based at MediaCity UK Campus.
-Expertise: Supports research in immersive technology, virtual production, live performance and human–computer interaction within the Arts and Humanities. Proficient in R&D strategy, fundraising and cross-sector partnerships.
-Notable Work:
-
-Managed R&D projects and secured funding (£30K–£2M) for digital innovation in cultural settings.
-
-Authored and co-authored key publications on artistic research, including Collaborative Performance Arts: Process and Practice (Palgrave, 2021) and the Arts Council–commissioned Digital Ecology of the North West (2010).
-
-Developed FACTLab, an incubator for speculative research at the Foundation for Art and Creative Technology (FACT), and designed the artplayer.tv online video platform.
-Affiliations: The University of Salford; Manchester Metropolitan University (School of Digital Arts, RiFT Programme); FACT; Arts Council England; Palgrave.
+Roger McKinley is a creative technology and content manager at the University of Salford, specialising in immersive technology, virtual production, and live performance research. He has led major R&D projects, secured significant funding for digital innovation, and authored key publications in artistic research and digital culture.
