--- a/public/data/team/12.md
+++ b/public/data/team/12.md
@@ -4,12 +4,4 @@ Bradley Harris – Metahuman Specialist
 
 ## Full Details
 
-Over 15 years in games and computer-graphics industries; specialises in 3D poly modelling, texturing, lighting and rendering for AAA console, mobile and franchise titles (including first-party Xbox and Star Wars). Adept at translating conceptual briefs into compelling visual narratives.
-Notable Work:
-
-Ghost Town Games contract artist (2020–24), Flipbook Studio and Factory Fifteen collaborations.
-
-Lead Artist at Immotion Group plc, delivering high-fidelity assets for real-time and pre-visualisation pipelines.
-
-Studio project nominated for six Sports Emmys, showcased on the Sphere Las Vegas for UFC 306.
-Affiliations: University of Hertfordshire (BA Digital Animation, 2:1); Krygon Studios; Nexus Studios partnerships; industry speaker and mentor.
+Bradley Harris is a metahuman specialist with over 15 years’ experience in 3D modelling, texturing, and rendering for AAA games and major franchises. He has delivered high-fidelity assets for leading studios, contributed to Emmy-nominated projects, and is recognised for translating creative briefs into compelling visual narratives.
