--- a/public/data/team/15.md
+++ b/public/data/team/15.md
@@ -3,13 +3,5 @@
 Garth Williams – Motion Capture Super Hero & Creative Director
 
 ## Full Details
-
-Collaborative story-making, theatre and outdoor arts. Specialises in immersive installation design, Unreal Engine real-time pipelines, live performance capture with Rokoko Smartsuit V2 (Coil Pro trackers, Smartgloves, Headrig), Isadora integration, video editing and interactive media workshops.
-Notable Work:
-
-Delivering bespoke motion-capture services for animation, VFX and live-streamed performances.
-
-Designing and directing theatre, film and video-game experiences for over 20 years.
-
-Expanding DreamLab’s community training programme, co-hosting AI- and XR-focused drop-in sessions at MediaCityUK Content Studios.
+Garth Williams is a creative director and motion capture specialist with over 20 years’ experience in theatre, film, and interactive media. He designs immersive installations, delivers bespoke motion-capture services, and leads community training programmes in AI and XR technologies.
 
