--- a/public/data/team/16.md
+++ b/public/data/team/16.md
@@ -4,14 +4,4 @@ David Afolabi – Cyber Compliance Analyst
 
 ## Full Details
 
-ISO 27001 implementation, security compliance, governance, risk management and compliance (GRC), digital forensics and incident response (DFIR), vulnerability management, and security awareness training.
-Notable Work:
-
-Community Engagement Officer & Event Co-ordinator at DreamLab, delivering Meta Quest 3 VR demos and co-producing the BEYOND Conference showcase (Nov 2024).
-
-Learning Facilitator at SBCS Salford British Computing Society, leading on-site professional development in information security.
-
-Pre-Sales Engineer and Cyber Security Engineer roles at Platview Technologies, deploying WAFs, SIEMs, EDRs and conducting proof-of-concept demos.
-
-Authored Medium articles: “Never Trust, Always Verify: Achieving Ironclad Security with the Zero Trust Architecture Model” (Jun 2024) and “Getting Hacked Is So Last Season: It’s Time to Strengthen Your Online Security” (Oct 2023).
-Affiliations: Cognisys; University of Salford (MSc Cyber Security, distinction); Covenant University (BSc Computer Science); Cisco Networking Academy; Joint Civil Aid Corps IT Director.
+David Afolabi is a cyber compliance analyst specialising in ISO 27001, security governance, and digital forensics. He delivers professional development and security awareness training, leads community engagement initiatives at DreamLab, and has authored articles on modern cybersecurity practices.
