--- a/public/data/team/17.md
+++ b/public/data/team/17.md
@@ -4,14 +4,4 @@ Christian G H Frost – Immersive Technical Artist (“Master of Puppets”)
 
 ## Full Details
 
-Founder and Technical Artist; Creative Delivery Lead at IN4 Group; Unity Associate Instructor.
-Expertise: 3D asset creation, rigging and procedural animation, motion capture, real-time pipelines in Unreal Engine, Unity and Blender; VR platform development for cybersecurity education; digital content creation using traditional and digital media.
-Notable Work:
-
-Developed a legacy VR education platform in partnership with CyberFirst, delivering interactive Cyber Security experiences for 12+ audiences.
-
-Led creative pipelines and interactive tool development for educational VR at IN4 Group, utilising Unreal Engine.
-
-Delivered courses as a Unity Associate Instructor and supported tech-course facilitation as a Digital Technician.
-
-Bespoke character and pet portraits in digital and traditional media.
+Christian G H Frost is an immersive technical artist and creative lead, specialising in 3D asset creation, procedural animation, and real-time pipelines in Unreal Engine and Unity. He has developed VR education platforms, led creative pipelines for interactive tools, and delivers technical art instruction and support.
