--- a/public/data/team/19.md
+++ b/public/data/team/19.md
@@ -4,4 +4,4 @@ Noelle Nurdin - Immersive Hyperpop Producer & Spatial Audio
 
 ## Full Details
 
-Welsh-Ukrainian electronic artist specializing in glitchy hyperpop, 9.1 spatial audio live sets and AV installations. Recent residencies at Glasshouse International and FutureEverything; releases on BMG’s “Home of Happy” and features on BBC Introducing and Disclosure’s playlists.
+Noelle Nurdin is a Welsh-Ukrainian electronic artist specialising in glitchy hyperpop, spatial audio, and immersive AV installations. Her work features in international residencies and major releases, with performances and tracks showcased by BMG, BBC Introducing, and Disclosure.
