--- a/public/data/team/20.md
+++ b/public/data/team/20.md
@@ -4,4 +4,4 @@ Annabeth Robinson - Creative Technologist
 
 ## Full Details
 
-Creative technologist and filmmaker with 20+ years’ teaching experience across animation, immersive technologies and game platforms. SFHEA-accredited, led “Educating Animators” conference (now Animated Connections) and award-winning serious-games researcher.
+Annabeth Robinson is a creative technologist and filmmaker with over 20 years’ experience teaching animation, immersive technologies, and game platforms. An SFHEA-accredited educator and award-winning researcher, she leads innovation in serious games and digital learning.
