--- a/public/data/team/21.md
+++ b/public/data/team/21.md
@@ -4,4 +4,4 @@ Lewis Hackett -  Blockchain Advisor & AR/VR Developer
 
 ## Full Details
 
-Multi-disciplinary creative with 15+ years directing film crews, motion graphics and interactive experiences. Skilled in fine art, photography, VFX, 2D/3D animation, sound editing and branding, translating imaginative concepts into polished productions.
+Lewis Hackett is a multidisciplinary creative with over 15 years’ experience in AR/VR development, blockchain, and interactive media. He directs film crews, produces motion graphics, and translates imaginative concepts into polished digital experiences across art, animation, and branding.
