--- a/public/data/team/22.md
+++ b/public/data/team/22.md
@@ -4,4 +4,4 @@ Dr Umran Ali - Creative Media
 
 ## Full Details
 
-PhD in Games Design & Virtual Environments; 15+ years’ experience leading curriculum and research in animation, serious games and digital landscapes. Chair of AniGame festival, developer of Virtual Landscapes series, and published on generative-agent simulacra.
+Dr Umran Ali is a creative media specialist with a PhD in Games Design & Virtual Environments and over 15 years’ experience leading curriculum and research in animation, serious games, and digital landscapes. He chairs the AniGame festival and develops innovative projects in virtual environments and generative media.
