--- a/public/data/team/23.md
+++ b/public/data/team/23.md
@@ -4,4 +4,4 @@ James Spiers - : Partnerships & Business Development
 
 ## Full Details
 
-Economic-development specialist with 12+ years driving digital & tech innovation projects. Expert in stakeholder engagement, grant sourcing and ecosystem-building across immersive technologies, gaming and creative industries.
+James Spiers is a business development and partnerships specialist with over 12 years’ experience driving digital and tech innovation. He excels in stakeholder engagement, grant sourcing, and ecosystem-building across immersive technologies, gaming, and the creative industries.
