--- a/public/data/team/24.md
+++ b/public/data/team/24.md
@@ -4,8 +4,4 @@ Dr Natasha Stott - Researcher & Artistic Producer
 
 ## Full Details
 
-Researcher, practitioner, and facilitator specialising in intermedial performance, XR environments, and embodied improvisation. Her PhD at the University of Salford led to the development of the Performance Projection Paradigm, a dialogic framework exploring interactions between the moving body and projected image.
-
-With over 20 years of international experience, Natasha has delivered movement facilitation, project leadership, and research-led performance across education and community settings. She is the founder of MindScape Lab, an XR initiative focused on immersive well-being, and has taught as a Dialogic Design for Dance tutor at the University of Salford and the China Academy of Arts.
-
-Her work has been exhibited globally, including at Future Lab (West Bund, China) and Continuum (Manchester & Kuala Lumpur), and recognised as best practice by the University of Salford. Natasha is also Chair and Trustee of Touchdown Dance, and an advocate for interdisciplinary, inclusive, and embodied learning.
+Dr Natasha Stott is a researcher and artistic producer specialising in intermedial performance, XR environments, and embodied improvisation. With over 20 years’ international experience, she leads research-led performance projects, founded MindScape Lab for immersive well-being, and advocates for inclusive, interdisciplinary learning.
