--- a/public/data/team/25.md
+++ b/public/data/team/25.md
@@ -4,4 +4,4 @@ Chris Croft - Video Producer & Director
 
 ## Full Details
 
-Producer/director leading creative video campaigns across music, sport and fashion. Notable credits include social edits for Rio Ferdinand’s “Rio Meets” series and in-field shoots with Fabrizio Romano for JD Sports’ “The Breakdown.”
+Chris Croft is a video producer and director known for leading creative campaigns across music, sport, and fashion. His credits include social edits for Rio Ferdinand’s 'Rio Meets' and in-field shoots for JD Sports’ 'The Breakdown', delivering impactful visual storytelling for major brands.
