--- a/public/data/team/26.md
+++ b/public/data/team/26.md
@@ -4,4 +4,4 @@ Thadeous Matthews - Technical Artist & Broadcast Operator
 
 ## Full Details
 
-Senior technical operator and Unreal/TouchDesigner artist, blending multi-camera directing with 3D design and motion-graphics. Hands-on in broadcast gallery launches, VR staging and immersive performance-capture projects.
+Thadeous Matthews is a senior technical artist and broadcast operator, blending expertise in Unreal Engine, TouchDesigner, and multi-camera directing. He delivers 3D design, motion graphics, and hands-on support for broadcast gallery launches, VR staging, and immersive performance-capture projects.
