--- a/public/data/team/27.md
+++ b/public/data/team/27.md
@@ -4,5 +4,5 @@ Dr. David Tully - Unreal Engine / XR Specialist
 
 ## Full Details
 
-PhD in Computer Science leveraging game-engine tech for GIS visualization, AR/VR and Web3D. Six years lecturing in serious games and leading Scenegraph’s creative-tech studio on AI avatars, VR wellbeing and spatial-computing innovations.
+Dr David Tully is an Unreal Engine and XR specialist with a PhD in Computer Science. He lectures in serious games, leads creative-tech innovation at Scenegraph, and develops AI avatars, VR well-being solutions, and spatial computing projects.
 
