--- a/public/data/team/28.md
+++ b/public/data/team/28.md
@@ -4,4 +4,4 @@ Cheryl Blake - Stop-Motion Animator & Community Musician
 
 ## Full Details
 
-MA Animation (Distinction) graduate and Ray Harryhausen Award winner. Creator of award-winning short films addressing grief, and veteran workshop leader in inclusive community music, percussion and animation.
+Cheryl Blake is a stop-motion animator and community musician, recognised with a Ray Harryhausen Award and an MA in Animation (Distinction). She creates award-winning short films addressing social themes and leads inclusive workshops in music, percussion, and animation.
