--- a/public/data/team/29.md
+++ b/public/data/team/29.md
@@ -4,4 +4,4 @@ Bernard Steer - Spatial Audio Consultant
 
 ## Full Details
 
-ACI-certified Pro Tools trainer and 20+ year creative-tech demonstrator. Founder of compact Dolby Atmos/DTS-X monitoring solutions, and lead spatial-audio consultant supporting immersive-tech residencies at MediaCity’s DreamLab.
+Bernard Steer is a spatial audio consultant and ACI-certified Pro Tools trainer with over 20 years’ experience in creative technology. He founded compact Dolby Atmos/DTS-X monitoring solutions and leads spatial-audio consultancy for immersive-tech residencies at MediaCity’s DreamLab.
