--- a/public/data/team/31.md
+++ b/public/data/team/31.md
@@ -4,4 +4,4 @@ Dr Andy Bennett - Partnerships, funding and development
 
 ## Full Details
 
-Geologist by training (PhD, University of Leeds) with seven years of academic study and research and 20 + years delivering projects in technology-rich organisations. Brings creativity, organisation and drive alongside a deep passion for science and engineering. Specialises in developing innovative technical solutions, fostering cross-sector collaborations, and advising businesses on selecting and integrating the best available technologies.
+Dr Andy Bennett is a partnerships and funding specialist with a PhD in geology and over 20 years’ experience delivering projects in technology-rich organisations. He excels in developing innovative technical solutions, fostering cross-sector collaborations, and advising businesses on technology integration.
