--- a/public/data/team/32.md
+++ b/public/data/team/32.md
@@ -4,4 +4,4 @@ Stephen Prince - Web, SEO, Marketing Specialist
 
 ## Full Details
 
-Digital marketing and e-commerce expert who’s led Click Through Digital for over a decade. Skilled in SEO, SEM, web development, social media, email marketing and lead generation. Passionate about helping independent businesses optimise their online presence and marketing spend to drive measurable sales growth.
+Stephen Prince is a digital marketing and e-commerce specialist who has led Click Through Digital for over a decade. Skilled in SEO, SEM, web development, and lead generation, he is passionate about helping independent businesses optimise their online presence and drive measurable growth.
