--- a/public/data/team/33.md
+++ b/public/data/team/33.md
@@ -4,4 +4,4 @@ Will Lewis-Clarke - Delivery Manager & QA Coach
 
 ## Full Details
 
-Over 26 years’ experience across banking, retail, utilities, transport and public-sector programmes, Will specialises in Agile delivery, SAFe QA coaching and test management. He combines risk-based testing methodologies, PRINCE2-based project governance and Scrum leadership with hands-on defect and stakeholder management—often delivering bespoke training and quality strategies for complex, multi-vendor initiatives.
+Will Lewis-Clarke is a delivery manager and QA coach with over 26 years’ experience across banking, retail, utilities, and public-sector programmes. He specialises in Agile delivery, SAFe QA coaching, and test management, delivering bespoke training and quality strategies for complex, multi-vendor initiatives.
