--- a/public/data/team/34.md
+++ b/public/data/team/34.md
@@ -4,4 +4,4 @@ Anthony Ashton - Drones, Scanning, Edge Visions Systems
 
 ## Full Details
 
-Certified UK Drone Pilot and Survey Specialist
+Anthony Ashton is a certified UK drone pilot and survey specialist, experienced in advanced scanning and edge vision systems. He delivers precise aerial surveys and supports innovative projects across diverse environments.
