--- a/public/data/team/35.md
+++ b/public/data/team/35.md
@@ -4,4 +4,4 @@ Lawrance Butterworth - Platform install specialist
 
 ## Full Details
 
-Specialised installation engineer with multi decade expertise in automotive, marine, and aviation installs at any scale. With particular focus on bringing immersive media experiences through full vehicle rebuilds, including complex engine, hydraulic, and power system design and fitout.
+Lawrance Butterworth is a specialised installation engineer with decades of expertise in automotive, marine, and aviation systems. He focuses on immersive media experiences, delivering complex vehicle rebuilds and advanced engine, hydraulic, and power system integrations.
