--- a/public/data/team/37.md
+++ b/public/data/team/37.md
@@ -4,4 +4,4 @@ John Donlon - Netork, Cloud, Infra, Cyber.
 
 ## Full Details
 
-CISCO certified expoert in Data Centre, Unified Communications, Backup and Disaster Recovery, WiFi, Cisco, IP Telephony, VoIP, People Analytics, security, Microsoft 365, Modern Workplace, Microsoft Teams, Cybersecurity, Cloud Computing, Managed Services, Technical Support, and Network and Server Support.
+John Donlon is a CISCO-certified expert in network, cloud, and cyber infrastructure. He specialises in data centre operations, unified communications, cybersecurity, and managed services, supporting organisations with advanced technical solutions and robust IT support.
