--- a/public/data/team/38.md
+++ b/public/data/team/38.md
@@ -4,4 +4,4 @@ Magnus Kemp - Large Scale Mixed Media Systems.
 
 ## Full Details
 
-Strategic and technical consulting, offering long-term, independent and unbiased strategic, design guidance and operational advice to clients in all areas of new-media, visualisation & in person experiential events.
+Magnus Kemp is a strategic and technical consultant specialising in large-scale mixed media systems. He provides independent guidance and operational advice for new-media, visualisation, and experiential events, supporting clients with long-term, unbiased expertise.
