--- a/public/data/team/39.md
+++ b/public/data/team/39.md
@@ -4,5 +4,5 @@ Kat Cook - Outdoor Design and Integration Specialist
 
 ## Full Details
 
-Expert in designing and integrating natural environments with creative technologies. With a world class foundation in landscape architecture, horticultural science, and ecological design from institutions like the Oxford College of Garden Design and the Royal Botanic Garden, Kew, Kat brings a unique blend of artistic vision and scientific understanding to her projects.
+Kat Cook is an outdoor design and integration specialist, blending landscape architecture, horticultural science, and ecological design with creative technologies. With training from leading institutions, she brings artistic vision and scientific expertise to innovative environmental projects.
 
