--- a/public/data/team/01.md
+++ b/public/data/team/01.md
@@ -4,4 +4,4 @@ Jarvis - Agentic Chief Operating Officer
 
 ## Full Details
 
-We're experimenting with an AI Agentic CEO. We have partnered with the Agentic Alliance to build a customised AI system that will help us run the company. This non voting member of our C-Suite team mirrors experiments at Salesforce, and elsewhere.
+Jarvis is DreamLab’s experimental AI Chief Operating Officer, developed in partnership with the Agentic Alliance. This non-voting C-Suite member supports company operations through advanced AI-driven decision-making, mirroring pioneering initiatives seen at Salesforce and beyond.
