--- a/public/data/team/18.md
+++ b/public/data/team/18.md
@@ -4,5 +4,5 @@ Dr Derek Hales - Cyberphysical Pataphysicist
 
 ## Full Details
 
-Architect and R&D director with 30+ years’ experience exploring speculative practices, XR/web3/spatial computing and digital twinning. PhD in Design Fiction (RCA), long track record in creative-technology policy, open innovation and practice-based research across architecture, film and immersive media.
+Dr Derek Hales is an architect and R&D director with over 30 years’ experience in speculative practices, XR, and digital twinning. With a PhD in Design Fiction, he leads research and innovation across architecture, film, and immersive media, shaping creative-technology policy and open innovation.
 
