--- a/public/data/team/30.md
+++ b/public/data/team/30.md
@@ -4,4 +4,4 @@ Dr Sean LCM Hill - Robotics, XR, Bespoke Electronics, Audio
 
 ## Full Details
 
-Creative technologist and entrepreneur with a PhD in Virtual Reality and an MSc in Robotics (University of Salford). Over 17 years designing and manufacturing high-end audio electronics (Audiostorm) and bespoke robotic/software solutions (SM Robotics). Formerly a senior lecturer and researcher in immersive systems, blending expertise in electronics, CAD, VR/AR and HMI to turn inventive concepts into real-world products.
+Dr Sean LCM Hill is a creative technologist and entrepreneur with a PhD in Virtual Reality and an MSc in Robotics. He has over 17 years’ experience designing high-end audio electronics and bespoke robotic solutions, and has lectured in immersive systems, blending expertise in electronics, CAD, VR/AR, and HMI.
