--- a/public/data/team/02.md
+++ b/public/data/team/02.md
@@ -4,4 +4,4 @@ Pete Woodbridge - Chief Technical Officer
 
 ## Full Details
 
-Pete Woodbridge is a creative technologist and virtual production specialist, with expertise spanning AI applications, immersive experiences, and technical art. As CTO, he drives innovation in storytelling and content technologies, and is a frequent speaker at industry events. Pete also serves as R&D Innovation Manager at MediaCity Immersive Technologies.
+Pete Woodbridge is a creative technologist and virtual production specialist, with expertise spanning AI applications, immersive experiences, and technical art. As CTO, he drives innovation in storytelling and content technologies, and is a frequent speaker at industry events. Pete also serves as R&D Innovation Lead at MediaFutures.
