final alignment on team sheet

--- a/public/data/team/34.md
+++ b/public/data/team/34.md
@@ -1,6 +1,6 @@
 # Headline
 
-Anthony Ashton - Drones, Scanning, Edge Visions Systems
+Anthony Ashton - Drones, Scanning, Edge Vision Systems
 
 ## Full Details
 
