--- a/public/data/team/33.md
+++ b/public/data/team/33.md
@@ -1,7 +1,7 @@
 # Headline
 
-Will Lewis-Clarke - Delivery Manager & QA Coach
+Will Lewis-Clarke - Delivery Manager & QA
 
 ## Full Details
 
-Will Lewis-Clarke is a delivery manager and QA coach with over 26 years’ experience across banking, retail, utilities, and public-sector programmes. He specialises in Agile delivery, SAFe QA coaching, and test management, delivering bespoke training and quality strategies for complex, multi-vendor initiatives.
+Will Lewis-Clarke is a delivery manager and QA practitioner with over 26 years’ experience across banking, retail, utilities, and public-sector programmes. He specialises in Agile delivery, SAFe QA coaching, and test management, delivering bespoke training and quality strategies for complex, multi-vendor initiatives.
