--- a/public/data/team/42.md
+++ b/public/data/team/42.md
@@ -1,7 +1,7 @@
 # Headline
 
-Prof Nick Avis – Computational Visualization Expert
+Pip Rustage – Advertising Photographer & Creative Producer
 
 ## Full Details
 
-Nick Avis is an accomplished innovator specializing in hydrogen fuel cell technologies and computational visualization. He is currently an Enterprise Fellow with the Royce Hydrogen Accelerator at the University of Manchester, driving commercialization and innovation in clean energy solutions. Previously, as CEO of Clean Power Ltd, he advanced polymer electrolyte membrane (PEM) fuel cell performance and cost-efficiency. His academic career spans roles including Pro-Vice Chancellor at the University of Chester and Professor at Cardiff University, where he developed advanced immersive visualization and computational platforms applied across biomedical imaging, molecular modeling, and virtual environments. Nick actively contributes to the Greater Manchester Innovation Navigator programme, supporting businesses in commercializing cutting-edge technologies.
+Pip Rustage is a highly experienced advertising photographer, SFX photography specialist, stills producer, and studio design consultant based in Manchester, with over 20 years in the creative industry. She regularly collaborates with top-tier creative and marketing agencies, and major global brands including New Balance, Pepsi Max, and Adidas, delivering compelling, technically demanding photographic projects. Originally trained in traditional film photography and darkroom printing, Pip has built her career on meticulous precision, artistic vision, and deep empathy—qualities first honed during her early years in impactful photojournalism. Today, she thrives in dynamic, high-pressure environments, leading multidisciplinary teams to achieve exceptional results. Pip also hosts the creative industry networking event Creative Boom IRL Manchester and manages MADDchester, a community supporting individuals with ADHD and ASD.
